# CALYPSO-Bohrium

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: mirror_gitee.yml
backup/: calypso_bohrium.qe.py  calypso_bohrium.qe_test.py  calypso_bohrium_Li_POC.pickup.newpy
calypso_bohrium/: _version.py  abacus.bk.py  abacus.py  calypso_bohrium_Li_POC.pickup.py  dftb.py  dp.py  main.py  qe.py  utils.py  vasp.py  write_outcar.py
example/: INCAR_2
example/abacus_example/: INPUT_1  INPUT_2  INPUT_3  del.sh  machine.json  pp  run.sh  stru.head
example/dp_example/: calypso_check_outcar.py  calypso_run_opt.py  frozen_model.pb  machine.json  resources.json  run.sh
example/input.dat.example/pso/: input.dat.2d.multilayer  input.dat.2d.singlelayer  input.dat.vsc
example/input.dat.example/sabc/: input.dat.2d.multilayer  input.dat.cluster  input.dat.vsc
example/interface_vasp_example/: SUBSTRATE  machine.json  submit.sh
example/qe_example/: del.sh  machine.json  pw_input_1  pw_input_2  pw_input_3  run.sh
example/run/: POTCAR  run.sh
example/templates/abacus_example/: INPUT_3  STRU  pp
example/templates/dp_example/: machine.json  out
example/templates/input.dat.example/pso/: input.dat.cluster  input.dat.vary.formula
example/templates/input.dat.example/sabc/: input.dat.2d.singlelayer  input.dat.vary.formula
example/templates/vasp_HCNO_example/: INCAR_2  INCAR_3  machine.json
example/templates/vasp_example/: back.sh  del.sh  machine.json
example/vasp_HCNO_example/: INCAR_1  INCAR_4  POTCAR  machine.json
example/vasp_example/: INCAR_1  INCAR_3  machine.json  resources.json  run.sh
example/workshop230518/: machine.json
src/: calypso_bohrium.py  machine.json  run.sh
utils/: cak3.py  showjob
